--- a/design.css
+++ b/design.css
@@ -32,6 +32,7 @@ h3 {
 @media screen and (min-width: 300px) {  
 .modal-content {
         width: 100%;
+		background-color: pink;
     }
 }
 
@@ -40,6 +41,7 @@ h3 {
 @media screen and (min-width: 500px) {
 	 .modal-content {
         width: 100%;
+		background-color: yellow;
     }
 }
 
@@ -48,6 +50,7 @@ h3 {
 @media screen and (max-width: 645px)  {
    .hidden {
       display: block;
+	  background-color: orange;
    }
    .nav-item:not(:last-of-type) {
       display: none;
